# unicode-canonical-combining-class

./: .travis.yml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml
src/: canonical_combining_class.rs  lib.rs  tables.rs
