[package]
name = "unicode-canonical-combining-class"
version = "0.3.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"

homepage = "https://github.com/yeslogic/unicode-canonical-combining-class"
documentation = "https://docs.rs/unicode-canonical-combining-class"
repository = "https://github.com/yeslogic/unicode-canonical-combining-class"

readme = "README.md"
license = "Apache-2.0"

description = "Fast lookup of the Canonical Combining Class property"
keywords = ["unicode", "canonical", "combining", "class", "no-std"]
categories = ["text-processing"]

[dependencies]
